overlays/prod/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: argocd-server-ingress
  namespace: argocd
spec:
  rules:
    - host: argocd.com
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: https
